--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".app.SeminarioApp"
         android:allowBackup="true"
@@ -12,16 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Seminario">
+
         <activity
-            android:name=".ui.RawgActivity"
+            android:name=".ui.activity.RawgActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.FilterActivity" />
-    </application>
 
+        <activity
+            android:name=".ui.activity.GameDetailActivity"
+            android:exported="false"
+            android:label="Detalle del Juego"/>
+
+        <activity
+            android:name=".ui.activity.FilterActivity"
+            android:exported="false"
+            android:label="Filtros"/>
+
+    </application>
 </manifest>
